# muscat

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: benchmark.yml  rust.yml
benches/: cpa.rs  dpa.rs  helper.rs  nicv.rs  snr.rs  ttest.rs
muscatpy/: CHANGELOG.md  Cargo.toml
muscatpy/src/: distinguishers.rs  leakage_detection.rs  processors.rs
src/: cpa.rs  cpa_normal.rs  fast_cpa.rs  leakage_detection.rs  lib.rs  preprocessors.rs  processors.rs  trace.rs  util.rs
src/distinguishers/: cpa.rs  cpa_normal.rs  dpa.rs
