[package]
name = "muscatpy"
description = "Multithreaded Side Channel Attacks Tool"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ledger-Donjon/muscat"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "muscatpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
muscat = { path = ".." }
numpy = "0.27.1"
